tests/test_proof/bad/output/prolala_motivating_example.catala_en.Proof
[ERROR] [Amount.amount] This variable might return an empty error:
  --> tests/test_proof/bad/prolala_motivating_example.catala_en
   | 
60 |   context amount content integer
   |           ^^^^^^
   + ProLaLa 2022 Super Cash Bonus
   +-+ Amount
Counterexample generation is disabled so none was generated.
[ERROR] [Eligibility.is_eligible] This variable might return an empty error:
  --> tests/test_proof/bad/prolala_motivating_example.catala_en
   | 
11 |   output is_eligible content boolean
   |          ^^^^^^^^^^^
   + ProLaLa 2022 Super Cash Bonus
   +-+ Eligibility
Counterexample generation is disabled so none was generated.
[ERROR] [Eligibility.is_eligible] At least two exceptions overlap for this variable:
  --> tests/test_proof/bad/prolala_motivating_example.catala_en
   | 
11 |   output is_eligible content boolean
   |          ^^^^^^^^^^^
   + ProLaLa 2022 Super Cash Bonus
   +-+ Eligibility
Counterexample generation is disabled so none was generated.
